<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/presentation_title"

        android:id="@+id/presentation2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presentation3_title" />

    <ImageView
        android:id="@+id/play_btn"

        android:layout_centerInParent="true"
        android:tint="@color/colorAccent"
        android:background="@null"
        android:src="@drawable/play"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/play" />

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/letsplay_btn"

        android:padding="15dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="?attr/selectableItemBackground"
        android:text="@string/presentation3_lets_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
