<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#212121"
    android:gravity="center"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="100dp">


    <RelativeLayout
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/play_btn"

            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_play_arrow_white_24dp"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/play" />
        <ImageView
            android:id="@+id/pause_btn"

            android:visibility="gone"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_pause_white_24dp"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/pause" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/stop_btn"

        android:clickable="true"
        android:layout_centerInParent="true"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_stop_white_24dp"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/stop" />

</LinearLayout>