<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/presentation_title"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presentation2_choose_a_category" />

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="?android:attr/buttonBarButtonStyle"

            android:background="?attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/radios"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            style="?android:attr/buttonBarButtonStyle"

            android:background="?attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:layout_weight="1"
            android:text="@string/genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
