<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.colinjeremie.willyoufindit.activities.HomeActivity">

    <TextView
        style="@style/presentation_title"

        android:layout_alignParentTop="true"
        android:text="@string/presentation2_choose_a_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.github.colinjeremie.willyoufindit.SquareLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                style="?attr/buttonBarButtonStyle"

                android:id="@+id/choose_category_radio_btn"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="20dp"
                android:padding="25dp"
                android:text="@string/radios"
                android:background="?attr/selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </com.github.colinjeremie.willyoufindit.SquareLayout>
        <com.github.colinjeremie.willyoufindit.SquareLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                style="?attr/buttonBarButtonStyle"

                android:id="@+id/choose_category_genre_btn"
                android:padding="25dp"
                android:text="@string/genres"
                android:background="?attr/selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </com.github.colinjeremie.willyoufindit.SquareLayout>
    </LinearLayout>
</RelativeLayout>
